--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -81,3 +81,13 @@ deploy_od_stage:
     name: stage_odysseus
     url: http://stage-app.odysseus.lcl
   when: manual
+  
+deploy_od_qa:
+  extends: .deploy
+  variables:
+    DEPLOYMENT_FILE: qa_od.yml
+    EXTRA_VARS: "tag_name=$TAG_NAME"
+  environment:
+    name: qa_odysseus
+    url: http://qa-app.odysseus.lcl
+  when: manual
