--- a/IIS/IIS.Core/appsettings.Development.json
+++ b/IIS/IIS.Core/appsettings.Development.json
@@ -6,17 +6,21 @@
       "Microsoft": "Information"
     }
   },
-  "ConnectionStrings": {
-    "db": "Server=db;Database=contour;Username=postgres;Password=;",
-    "db-legacy": "Server=db;Database=contour_dev;Username=postgres;Password=;"
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://*:5000"
+      },
+      "Https": {
+        "Url": "https://*:5001"
+      }
+    }
   },
-  "mq": {
-    "host": "mq",
-    "username": "guest",
-    "password": "guest"
+  "jwt": {
+    "issuer": "iis",
+    "signingKey": "L8DD$,m4>N!?N+s6-6Sb*dV~.\\RD%q'9T%s[A}NV'#K5",
+    "lifeTime": "02:00:00"
   },
-  "gsmWorkerUrl": "http://ml.contour.net:8000/transcribe",
-  "es": {
-    "host": "http://es:9200"
-  }
+  "defaultUserName": "olya",
+  "defaultPassword": "hammer69"
 }
