--- a/IIS/IIS.Core/appsettings.json
+++ b/IIS/IIS.Core/appsettings.json
@@ -5,22 +5,17 @@
     }
   },
   "AllowedHosts": "*",
-  "Kestrel": {
-    "Endpoints": {
-      "Http": {
-        "Url": "http://*:5000"
-      },
-      "Https": {
-        "Url": "http://*:5001"
-      }
-    }
+  "ConnectionStrings": {
+    "db": "Server=localhost;Database=Contour;Username=postgres",
+    "db-legacy": "Server=localhost;Database=ContourLegacy;Username=postgres"
   },
-  "salt": "a}~QUU'H&}he\"42{",
-  "jwt": {
-    "issuer": "iis",
-    "signingKey": "L8DD$,m4>N!?N+s6-6Sb*dV~.\\RD%q'9T%s[A}NV'#K5",
-    "lifeTime": "02:00:00"
+  "mq": {
+    "host": "localhost"
   },
-  "defaultUserName": "olya",
-  "defaultPassword": "hammer69"
+  "gsmWorkerUrl": "http://ml.contour.net:8000/transcribe",
+  "es": {
+    "host": "http://localhost:9200"
+  },
+  "reportsAvailable": "true",
+  "salt": null
 }
