fix(config): adds environment variables.

--- a/IIS/IIS.Core/appsettings.json
+++ b/IIS/IIS.Core/appsettings.json
@@ -4,10 +4,25 @@
       "Default": "Warning"
     }
   },
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://*:5000"
+      },
+      "Https": {
+        "Url": "https://*:5001"
+      }
+    }
+  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "db": "Server=localhost;Database=Contour;Username=postgres",
     "db-legacy": "Server=localhost;Database=ContourLegacy;Username=postgres"
+  },
+  "jwt": {
+    "issuer": "iis",
+    "signingKey": null,
+    "lifeTime": "02:00:00"
   },
   "mq": {
     "host": "localhost"
