fix(api): adds default user

--- a/IIS/IIS.Core/appsettings.json
+++ b/IIS/IIS.Core/appsettings.json
@@ -8,9 +8,6 @@
     "Endpoints": {
       "Http": {
         "Url": "http://*:5000"
-      },
-      "Https": {
-        "Url": "https://*:5001"
       }
     }
   },
@@ -32,5 +29,7 @@
     "host": "http://localhost:9200"
   },
   "reportsAvailable": "true",
-  "salt": null
+  "salt": null,
+  "defaultUserName": "olya",
+  "defaultPassword": "hammer69"
 }
