feat(api): adds serilog
# Conflicts:
#	IIS/IIS.Core/IIS.Core.csproj

--- a/IIS/IIS.Core/appsettings.json
+++ b/IIS/IIS.Core/appsettings.json
@@ -1,8 +1,22 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3} {SourceContext}] [{ThreadId}] ({Scope}) {Message:lj}{NewLine}{Exception}"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithThreadId" ]
   },
   "Kestrel": {
     "Endpoints": {
