feat(materials): add consumer fro material added event
IIS-4396 [API] додати підтримку оновлення поля при завантаженні матеріалів

--- a/IIS/IIS.Core/appsettings.Development.json
+++ b/IIS/IIS.Core/appsettings.Development.json
@@ -3,5 +3,8 @@
         "MinimumLevel": {
             "Default": "Verbose"
         }
+    },
+    "jwt": {
+        "lifeTime": "900:00:00"
     }
 }
