--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ stages:
 build_job:
   stage: build
   variables:
-    IIS_SOURCE_REVISION_ID: $(git describe --always --tags --dirty)
+    IIS_SOURCE_REVISION_ID: git describe --always --tags --dirty
     IIS_VERSION_SUFFIX: $CI_PIPELINE_ID
   script:
     - dotnet publish IIS/IIS.Core/IIS.Core.csproj -c Release -o publish/core
