--- a/IIS/IIS.Core/IIS.Core.csproj
+++ b/IIS/IIS.Core/IIS.Core.csproj
@@ -15,9 +15,9 @@
     <PackageReference Include="AspNetCore.HealthChecks.Rabbitmq" Version="3.0.3" />
     <PackageReference Include="Flee" Version="1.2.2" />
     <PackageReference Include="GeoJSON.Net" Version="1.2.14" />
-    <PackageReference Include="HotChocolate" Version="11.0.0-preview.62" />
-    <PackageReference Include="HotChocolate.AspNetCore" Version="11.0.0-preview.62" />
-    <PackageReference Include="HotChocolate.AspNetCore.Playground" Version="11.0.0-preview.62" />
+    <PackageReference Include="HotChocolate" Version="10.3.0" />
+    <PackageReference Include="HotChocolate.AspNetCore" Version="10.3.0" />
+    <PackageReference Include="HotChocolate.AspNetCore.Playground" Version="10.3.0" />
     <PackageReference Include="LinqKit.Core" Version="1.1.17" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.4" />
     <PackageReference Include="protobuf-net" Version="2.4.4" />
