--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -70,7 +70,7 @@ deploy_contour_qa:
   extends: .deploy
   variables:
     DEPLOYMENT_FILE: qa_con.yml
-    EXTRA_VARS: "tag_name=$TAG_NAME ontology_clear=$ONTOLOGY_NAME"
+    EXTRA_VARS: "tag_name=$CI_COMMIT_TAG ontology_clear=$ONTOLOGY_CLEAR"
   environment:
     name: qa_contour
     url: http://qa-app.contour.net
@@ -80,7 +80,7 @@ deploy_contour_stage:
   extends: .deploy
   variables:
     DEPLOYMENT_FILE: stage_con.yml
-    EXTRA_VARS: "tag_name=$TAG_NAME ontology_clear=$ONTOLOGY_NAME"
+    EXTRA_VARS: "tag_name=$CI_COMMIT_TAG ontology_clear=$ONTOLOGY_CLEAR"
   environment:
     name: stage_contour
     url: http://192.168.88.164
@@ -90,7 +90,7 @@ deploy_od_stage:
   extends: .deploy
   variables:
     DEPLOYMENT_FILE: stage_od.yml
-    EXTRA_VARS: "tag_name=$TAG_NAME ontology_clear=$ONTOLOGY_NAME"
+    EXTRA_VARS: "tag_name=$CI_COMMIT_TAG ontology_clear=$ONTOLOGY_CLEAR"
   environment:
     name: stage_odysseus
     url: http://stage-app.odysseus.lcl
@@ -100,7 +100,7 @@ deploy_od_qa:
   extends: .deploy
   variables:
     DEPLOYMENT_FILE: qa_od.yml
-    EXTRA_VARS: "tag_name=$TAG_NAME ontology_clear=$ONTOLOGY_NAME"
+    EXTRA_VARS: "tag_name=$CI_COMMIT_TAG ontology_clear=$ONTOLOGY_CLEAR"
   environment:
     name: qa_odysseus
     url: http://qa-app.odysseus.lcl
