Test Person and name attribute.

--- a/IIS/IIS.Core/Properties/launchSettings.json
+++ b/IIS/IIS.Core/Properties/launchSettings.json
@@ -18,6 +18,7 @@
     },
     "IIS.Core": {
       "commandName": "Project",
+      "commandLineArgs": "--iis-actions apply-ef-migrations,clear-types,fill-contour-types",
       "launchBrowser": true,
       "launchUrl": "playground",
       "environmentVariables": {
