--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,6 +29,7 @@ build_job:
     EXTRA_VARS: "artifacts_path=$CI_PROJECT_DIR"
   script:
     - cd /home/gitlab-runner/ansible
+    - echo $EXTRA_VARS
     - ansible-playbook app_api_net.yml -e '@./vars/$DEPLOYMENT_FILE' -e '$EXTRA_VARS'
     - rm -rf $CI_PROJECT_DIR/*
   tags:
