--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,10 +26,9 @@ build_job:
   variables:
     GIT_STRATEGY: none
     GIT_CHECKOUT: "false"
-    EXTRA_VARS: "artifacts_path=$CI_PROJECT_DIR"
+    EXTRA_VARS: "artifacts_path=$CI_PROJECT_DIR tag_name=''"
   script:
     - cd /home/gitlab-runner/ansible
-    - echo $EXTRA_VARS
     - ansible-playbook app_api_net.yml -e '@./vars/$DEPLOYMENT_FILE' -e '$EXTRA_VARS'
     - rm -rf $CI_PROJECT_DIR/*
   tags:
