--- a/src/Iis.Api/Properties/launchSettings.json
+++ b/src/Iis.Api/Properties/launchSettings.json
@@ -18,6 +18,7 @@
     },
     "IIS.Core": {
       "commandName": "Project",
+      "commandLineArgs": "--iis-actions recreate-elastic",
       "launchBrowser": true,
       "launchUrl": "playground",
       "environmentVariables": {
