--- a/src/Iis.Elastic/Iis.Elastic.csproj
+++ b/src/Iis.Elastic/Iis.Elastic.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Iis.Domain\Iis.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
