--- a/src/Iis.Api/appsettings.json
+++ b/src/Iis.Api/appsettings.json
@@ -44,8 +44,9 @@
     "host": "localhost"
   },
   "gsmWorkerUrl": "http://ml.contour.net:8000/transcribe",
-  "es": {
-    "host": "http://localhost:9200"
+  "elasticSearch": {
+    "Uri": "http://localhost:9200",
+    "IndexPreffix":  "ont_"
   },
   "reportsAvailable": "true",
   "salt": null,
