--- a/src/Iis.Api/appsettings.Development.json
+++ b/src/Iis.Api/appsettings.Development.json
@@ -1,7 +1,10 @@
 {
   "Serilog": {
     "MinimumLevel": {
-      "Default": "Verbose"
+      "Default": "Verbose",
+      "Override": {
+        "Microsoft.EntityFrameworkCore.Database.Command": "Information"
+      }
     }
   },
   "jwt": {
