feat(ontology): table OntologyMigrations
Relates to IIS-4664

--- a/src/Iis.Api/appsettings.json
+++ b/src/Iis.Api/appsettings.json
@@ -49,7 +49,7 @@
   },
   "gsmWorkerUrl": "http://ml.contour.net:8000/transcribe",
   "elasticSearch": {
-    "Uri": "http://localhost:9200",
+    "Uri": "http://dev-es.contour.net:9200",
     "IndexPreffix": "ont_"
   },
   "reportsAvailable": "true",
