feature(ontology): OntologyManager
Relates to IIS-4684

--- a/src/Iis.Api/Properties/launchSettings.json
+++ b/src/Iis.Api/Properties/launchSettings.json
@@ -18,7 +18,7 @@
     },
     "IIS.Core": {
       "commandName": "Project",
-      "commandLineArgs": "--iis-actions migrate-ontology",
+      "commandLineArgs": "--iis-actions recreate-elastic",
       "launchBrowser": true,
       "launchUrl": "playground",
       "environmentVariables": {
