--- a/src/Iis.Api/appsettings.json
+++ b/src/Iis.Api/appsettings.json
@@ -39,7 +39,7 @@
     "storage": "Database",
     "path": null 
   },
-  "jwt": {
+  "jwt": { 
     "issuer": "iis",
     "signingKey": null,
     "lifeTime": "02:00:00"
@@ -49,7 +49,7 @@
   },
   "gsmWorkerUrl": "http://ml.contour.net:8000/transcribe",
   "elasticSearch": {
-    "Uri": "http://dev-es.contour.net:9200",
+    "Uri": "http://localhost:9200",
     "IndexPreffix": "ont_"
   },
   "reportsAvailable": "true",
