chore(ci)delete stage envs + tuning qa envs

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -77,37 +77,18 @@ deploy_contour_qa:
   extends: .deploy
   variables:
     DEPLOYMENT_FILE: qa_con.yml
-    EXTRA_VARS: "tag_name=$CI_COMMIT_TAG ontology_clear='$ONTOLOGY_CLEAR'"
+##    EXTRA_VARS: "tag_name=$CI_COMMIT_TAG ontology_clear='$ONTOLOGY_CLEAR'"
   environment:
     name: qa_contour
     url: http://qa-app.contour.net
   when: manual
 
-deploy_contour_stage:
-  extends: .deploy
-  variables:
-    DEPLOYMENT_FILE: stage_con.yml
-    EXTRA_VARS: "tag_name=$CI_COMMIT_TAG ontology_clear='$ONTOLOGY_CLEAR'"
-  environment:
-    name: stage_contour
-    url: http://192.168.88.164
-  when: manual
-
-deploy_od_stage:
-  extends: .deploy
-  variables:
-    DEPLOYMENT_FILE: stage_od.yml
-    EXTRA_VARS: "tag_name=$CI_COMMIT_TAG ontology_clear='$ONTOLOGY_CLEAR'"
-  environment:
-    name: stage_odysseus
-    url: http://stage-app.odysseus.lcl
-  when: manual
 
 deploy_od_qa:
   extends: .deploy
   variables:
     DEPLOYMENT_FILE: qa_od.yml
-    EXTRA_VARS: "tag_name=$CI_COMMIT_TAG ontology_clear='$ONTOLOGY_CLEAR'"
+##    EXTRA_VARS: "tag_name=$CI_COMMIT_TAG ontology_clear='$ONTOLOGY_CLEAR'"
   environment:
     name: qa_odysseus
     url: http://qa-app.odysseus.lcl
