--- a/src/Iis.OntologyManager/appsettings.json
+++ b/src/Iis.OntologyManager/appsettings.json
@@ -12,6 +12,7 @@
     "qa": "Server=qa-db.contour.net;Database=contour_dev_net;Username=postgres;Password=S1mpl3xTLS2709",
     "local": "Server=localhost;Database=contour_dev_net;Username=postgres;Password=123",
     "localprod": "Server=localhost;Database=contour_prod;Username=postgres;Password=123",
+    "localmigration1": "Server=localhost;Database=contour_migration1;Username=postgres;Password=123",
     "od_dev": "Server=dev-db.odysseus.lcl;Database=od_dev;Username=postgres;Password=S1mpl3xTLS2709"
   },
   "DefaultSchemaStorage":  "c:\\work\\!!!\\SchemaStorage"
