--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,6 +21,7 @@ build_job:
     - master
     - /^v.+$/
     - /^sprint\..+$/
+    - /^Release_*/
 
 .deploy:
   stage: deploy
@@ -38,6 +39,7 @@ build_job:
   only:
     - /^v.+$/
     - /^sprint\..+$/
+    - /^Release_*/
 
 .deploy_contour_dev:
   extends: .deploy
@@ -55,23 +57,36 @@ build_job:
     name: dev_odysseus
     url: http://od-dev.contour.net
 
-deploy_contour_dev:
-  extends: .deploy_contour_dev
+#deploy_contour_dev:
+#  extends: .deploy_contour_dev
+#  only:
+#    - master
+
+#deploy_od_dev:
+#  extends: .deploy_od_dev
+#  only:
+#    - master
+
+#deploy_contour_dev_manual:
+#  extends: .deploy_contour_dev
+#  when: manual
+
+#deploy_od_dev_manual:
+#  extends: .deploy_od_dev
+#  when: manual
+
+
+deploy_contour_qa_auto_tob:
+  extends: .deploy
+  variables:
+    DEPLOYMENT_FILE: qa_con.yml
+  environment:
+    name: qa_contour
+    url: http://qa-app.contour.net
+#  when: manual
   only:
-    - master
+    - /^Release_*/ 
 
-deploy_od_dev:
-  extends: .deploy_od_dev
-  only:
-    - master
-
-deploy_contour_dev_manual:
-  extends: .deploy_contour_dev
-  when: manual
-
-deploy_od_dev_manual:
-  extends: .deploy_od_dev
-  when: manual
 
 deploy_contour_qa:
   extends: .deploy
