Revert "Merge branch 'IIS-4587-technical-tasks' into Release_17"
This reverts commit f3dfcdd227d79f52892269d24d9b39a5b6f1ce40, reversing
changes made to af3770e3042091b6f848df5af5419546459e98c1.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,7 +21,6 @@ build_job:
     - master
     - /^v.+$/
     - /^sprint\..+$/
-    - /^Release_*/
 
 .deploy:
   stage: deploy
@@ -39,7 +38,6 @@ build_job:
   only:
     - /^v.+$/
     - /^sprint\..+$/
-    - /^Release_*/
 
 .deploy_contour_dev:
   extends: .deploy
@@ -57,26 +55,15 @@ build_job:
     name: dev_odysseus
     url: http://od-dev.contour.net
 
-#deploy_contour_dev:
-#  extends: .deploy_contour_dev
-#  only:
-#    - master
-
-deploy_contour_dev_auto:
+deploy_contour_dev:
   extends: .deploy_contour_dev
   only:
-    - /^Release_*/
-
-
-#deploy_od_dev:
-#  extends: .deploy_od_dev
-#  only:
-#    - master
+    - master
 
 deploy_od_dev:
   extends: .deploy_od_dev
   only:
-    - /^Release_*/
+    - master
 
 deploy_contour_dev_manual:
   extends: .deploy_contour_dev
@@ -85,7 +72,6 @@ deploy_contour_dev_manual:
 deploy_od_dev_manual:
   extends: .deploy_od_dev
   when: manual
-
 
 deploy_contour_qa:
   extends: .deploy
