--- a/src/Iis.Api/appsettings.json
+++ b/src/Iis.Api/appsettings.json
@@ -27,7 +27,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "db": "Server=localhost;Database=contour_mig;Username=postgres;Password=123",
+    "db": "Server=localhost;Database=contour_dev_net;Username=postgres;Password=123",
     "db-legacy": "Server=localhost;Database=ContourLegacy;Username=postgres"
   },
   "map": {
