--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -66,6 +66,7 @@ deploy_contour_dev_auto:
   extends: .deploy_contour_dev
   only:
     - /^Release_*/
+    - master
 
 
 #deploy_od_dev:
@@ -77,6 +78,7 @@ deploy_od_dev:
   extends: .deploy_od_dev
   only:
     - /^Release_*/
+    - master
 
 deploy_contour_dev_manual:
   extends: .deploy_contour_dev
