--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,6 +40,7 @@ build_job:
     - /^v.+$/
     - /^sprint\..+$/
     - /^Release_*/
+    - master
 
 .deploy_contour_dev:
   extends: .deploy
@@ -57,22 +58,12 @@ build_job:
     name: dev_odysseus
     url: http://od-dev.contour.net
 
-#deploy_contour_dev:
-#  extends: .deploy_contour_dev
-#  only:
-#    - master
 
 deploy_contour_dev_auto:
   extends: .deploy_contour_dev
   only:
     - /^Release_*/
     - master
-
-
-#deploy_od_dev:
-#  extends: .deploy_od_dev
-#  only:
-#    - master
 
 deploy_od_dev:
   extends: .deploy_od_dev
