changed files settings from database to folder

--- a/src/Iis.Api/appsettings.json
+++ b/src/Iis.Api/appsettings.json
@@ -36,8 +36,8 @@
     }
   },
   "files": {
-    "storage": "Database",
-    "path": null 
+    "storage": "Folder",
+    "path": "/root/storage" 
   },
   "jwt": { 
     "issuer": "iis",
