feat(ontology): Enums
Relates to IIS-4684

--- a/src/Iis.UnitTests/Iis.UnitTests.csproj
+++ b/src/Iis.UnitTests/Iis.UnitTests.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\Iis.Elastic\Iis.Elastic.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Iis.Ontology.OntologyEnum\" />
+  </ItemGroup>
+
 </Project>
