added publishing material event after save

--- a/src/Iis.Api/appsettings.json
+++ b/src/Iis.Api/appsettings.json
@@ -1,6 +1,8 @@
 {
   "Serilog": {
-    "Using": [ "Serilog.Sinks.Console" ],
+    "Using": [
+      "Serilog.Sinks.Console"
+    ],
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
@@ -16,7 +18,10 @@
         }
       }
     ],
-    "Enrich": [ "FromLogContext", "WithThreadId" ]
+    "Enrich": [
+      "FromLogContext",
+      "WithThreadId"
+    ]
   },
   "Kestrel": {
     "Endpoints": {
@@ -37,15 +42,20 @@
   },
   "files": {
     "storage": "Folder",
-    "path": "/root/storage" 
+    "path": "/root/storage"
   },
-  "jwt": { 
+  "jwt": {
     "issuer": "iis",
     "signingKey": null,
     "lifeTime": "02:00:00"
   },
   "mq": {
-    "host": "localhost"
+    "hostName": "localhost"
+  },
+  "materialEventPublisher": {
+    "targetChannel": {
+      "exchangeName": "materials"
+    }
   },
   "gsmWorkerUrl": "http://ml.contour.net:8000/transcribe",
   "elasticSearch": {
