IIS-5215. Add Unit test to CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,8 +35,13 @@ unit_test:
     reports:
       junit:
         - ./*test-result.xml
-    tags:
+  tags:
     - ci
+  only:
+    - master
+    - /^v.+$/
+    - /^sprint\..+$/
+    - /^Release_*/
 
 
 .deploy:
