--- a/src/Iis.UnitTests/Iis.UnitTests.csproj
+++ b/src/Iis.UnitTests/Iis.UnitTests.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Iis.Api\Iis.Api.csproj" />
+    <ProjectReference Include="..\Iis.Roles\Iis.Roles.csproj" />
   </ItemGroup>
 
 </Project>
