--- a/src/Iis.Domain/Iis.Domain.csproj
+++ b/src/Iis.Domain/Iis.Domain.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Iis.Interfaces\Iis.Interfaces.csproj" />
+    <ProjectReference Include="..\Iis.Roles\Iis.Roles.csproj" />
   </ItemGroup>
 
 </Project>
