--- a/src/Iis.ApiTests/AcceptanceTests.csproj
+++ b/src/Iis.ApiTests/AcceptanceTests.csproj
@@ -25,4 +25,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Iis.Api\Iis.Api.csproj" />
+  </ItemGroup>
+
 </Project>
