--- a/src/Iis.ApiTests/AcceptanceTests.csproj
+++ b/src/Iis.ApiTests/AcceptanceTests.csproj
@@ -14,7 +14,8 @@
 
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="5.10.3" />
-    <PackageReference Include="GraphQL.Client" Version="2.1.2" />
+    <PackageReference Include="GraphQL.Client" Version="3.1.0" />
+    <PackageReference Include="GraphQL.Client.Serializer.Newtonsoft" Version="3.1.0" />
     <PackageReference Include="SpecFlow" Version="3.1.97" />
     <PackageReference Include="SpecFlow.Tools.MsBuild.Generation" Version="3.1.97" />
     <PackageReference Include="SpecFlow.xUnit" Version="3.1.97" />
