feat (materials): assign operators job
relates to: IIS-5331

--- a/src/Iis.Api/appsettings.json
+++ b/src/Iis.Api/appsettings.json
@@ -63,6 +63,13 @@
     "IndexPreffix": "ont_"
   },
   "reportsAvailable": "true",
+  "maxMaterialsPerOperator": {
+    "value": 10
+  },
+  "operatorAssigner": {
+    "queueName": "assign-operator"
+  },
+
   "salt": null,
   "defaultUserName": "olya",
   "defaultPassword": "hammer69"
