--- a/src/Iis.ThemeManagement/Iis.ThemeManagement.csproj
+++ b/src/Iis.ThemeManagement/Iis.ThemeManagement.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Iis.Roles\Iis.Roles.csproj" />
     <ProjectReference Include="..\Iis.Domain\Iis.Domain.csproj" />
+    <ProjectReference Include="..\Iis.Interfaces\Iis.Interfaces.csproj" />
     <ProjectReference Include="..\Iis.DataModel\Iis.DataModel.csproj" />
   </ItemGroup>
 
