--- a/src/Iis.Api/appsettings.json
+++ b/src/Iis.Api/appsettings.json
@@ -33,6 +33,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "db": "Server=localhost;Database=contour_dev_net;Username=postgres;Password=123",
+    //"db": "Server=dev-db.contour.net;Database=contour_dev_net;Username=postgres;Password=S1mpl3xTLS2709",
     "db-legacy": "Server=localhost;Database=ContourLegacy;Username=postgres"
   },
   "map": {
