added branches develop, rc-* and release-* to allowed to be deployed

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -62,6 +62,9 @@ unit_test:
     - /^sprint\..+$/
     - /^Release_*/
     - master
+    - develop
+    - /^rc-*/
+    - /^release-*/
 
 .deploy_contour_dev:
   extends: .deploy
