added correlationId and basic request/response logging

--- a/src/Iis.Api/appsettings.json
+++ b/src/Iis.Api/appsettings.json
@@ -1,7 +1,8 @@
 {
   "Serilog": {
     "Using": [
-      "Serilog.Sinks.Console"
+      "Serilog.Sinks.Console",
+      "Serilog.Sinks.File"
     ],
     "MinimumLevel": {
       "Default": "Information",
@@ -14,13 +15,24 @@
       {
         "Name": "Console",
         "Args": {
-          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3} {SourceContext}] [{ThreadId}] ({Scope}) {Message:lj}{NewLine}{Exception}"
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3} {SourceContext}] [{CorrelationId}] {Message:lj}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/log.txt",
+          "fileSizeLimitBytes": 104857600,
+          "rollingInterval": "Day",
+          "rollOnFileSizeLimit": true,
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3} {SourceContext}] [{CorrelationId}] {Message:lj}{NewLine}{Exception}"
         }
       }
     ],
     "Enrich": [
       "FromLogContext",
-      "WithThreadId"
+      "WithThreadId",
+      "WithCorrelationId"
     ]
   },
   "Kestrel": {
