--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ build_job:
   variables:
     IIS_VERSION_SUFFIX: $CI_PIPELINE_ID
   script:
-    - export IIS_SOURCE_REVISION_ID=`git describe --always --tags --dirty`
+    - export IIS_SOURCE_REVISION_ID=$PRODUCT_VERSION.$CI_PIPELINE_ID
     - dotnet publish src/Iis.Api/Iis.Api.csproj -c Release -o publish/core
     - env
   artifacts:
