refactor(ontology): inversed relations
Related to IIS-5620

--- a/src/Iis.OntologySchema/Iis.OntologySchema.csproj
+++ b/src/Iis.OntologySchema/Iis.OntologySchema.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Iis.Interfaces\Iis.Interfaces.csproj" />
+    <ProjectReference Include="..\Iis.Utility\Iis.Utility.csproj" />
   </ItemGroup>
 
 </Project>
