Revert "feat(elastic): integer and date mapping"
This reverts commit c0731587e5e6ea8236ba35c68402ee478898835e.

--- a/src/Iis.Api/appsettings.json
+++ b/src/Iis.Api/appsettings.json
@@ -1,8 +1,7 @@
 {
   "Serilog": {
     "Using": [
-      "Serilog.Sinks.Console",
-      "Serilog.Sinks.File"
+      "Serilog.Sinks.Console"
     ],
     "MinimumLevel": {
       "Default": "Information",
@@ -15,24 +14,13 @@
       {
         "Name": "Console",
         "Args": {
-          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3} {SourceContext}] [{CorrelationId}] {Message:lj}{NewLine}{Exception}"
-        }
-      },
-      {
-        "Name": "File",
-        "Args": {
-          "path": "Logs/log.txt",
-          "fileSizeLimitBytes": 104857600,
-          "rollingInterval": "Day",
-          "rollOnFileSizeLimit": true,
-          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3} {SourceContext}] [{CorrelationId}] {Message:lj}{NewLine}{Exception}"
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3} {SourceContext}] [{ThreadId}] ({Scope}) {Message:lj}{NewLine}{Exception}"
         }
       }
     ],
     "Enrich": [
       "FromLogContext",
-      "WithThreadId",
-      "WithCorrelationId"
+      "WithThreadId"
     ]
   },
   "Kestrel": {
