--- a/src/Iis.DataModel/Iis.DataModel.csproj
+++ b/src/Iis.DataModel/Iis.DataModel.csproj
@@ -13,6 +13,8 @@
     <Compile Remove="Migrations\20200310141751_MaterialSigns.Designer.cs" />
     <Compile Remove="Migrations\20200310142737_MaterialSigns.cs" />
     <Compile Remove="Migrations\20200310142737_MaterialSigns.Designer.cs" />
+    <Compile Remove="Migrations\20200721120237_MachineLearning_AddNewFields_Version_and_ProcessingDate.cs" />
+    <Compile Remove="Migrations\20200721120237_MachineLearning_AddNewFields_Version_and_ProcessingDate.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
