setup messaging & consuming

--- a/src/Iis.Api/appsettings.json
+++ b/src/Iis.Api/appsettings.json
@@ -81,7 +81,13 @@
   "operatorAssigner": {
     "queueName": "assign-operator"
   },
-
+  "featureHandler": {
+    "sourceChannel": {
+      "exchangeName": "materials",
+      "queueName": "materials.features",
+      "routingKeys": ["processing.#.#"]
+    }
+  },
   "salt": null,
   "defaultUserName": "olya",
   "defaultPassword": "hammer69"
