--- a/src/IIS.Repository/IIS.Repository.csproj
+++ b/src/IIS.Repository/IIS.Repository.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>netstandard2.1</TargetFramework>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <Version>1.0.0</Version>
-    <OutputPath>..\..\Components\</OutputPath>
+    <OutputPath></OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
