added prefetch Count property to FeatureHandler

--- a/src/Iis.Api/appsettings.json
+++ b/src/Iis.Api/appsettings.json
@@ -85,7 +85,8 @@
     "sourceChannel": {
       "exchangeName": "materials",
       "queueName": "materials.features",
-      "routingKeys": ["processing.#.#"]
+      "routingKeys": ["processing.#.#"],
+      "prefetchCount": 5
     }
   },
   "salt": null,
